--- a/_locales/zh/startbit-jsdoc-strings.json
+++ b/_locales/zh/startbit-jsdoc-strings.json
@@ -4,7 +4,7 @@
 	"startbit.startbit_setMotorSpeed":"設置馬達1和馬達2的速度，速度範圍-100到100，可控制坦克車行進和轉彎",
 	"startbit.onstartbit_custom_ir_pressed":"紅外檢測到指定的用戶自定義的碼值時觸發",
 	"startbit.onstartbit_remote_ir_pressed":"紅外檢測到指定的遙控器按鍵按下時觸發",
-	"startbit.startbit_getSoundVolume":"獲取聲音傳感器檢測到的音量等級，範圍0到255",
+	"startbit.startbit_getSoundVolume":"獲取聲音感應器檢測到的音量等級，範圍0到255",
 	"startbit.startbit_getBatVoltage":"獲取當前供電電壓，單位是mV",
 	"startbit.startbit_ext_output":"設置擴展口輸出高低電平",
 	"startbit.startbit_ext_io_status":"檢測卡擴展口的高低電平狀態",
@@ -24,17 +24,17 @@
 	"startbit.startbit_convertTemperature":"轉換溫度值為標準命令，發送到手機端，APP會顯示當前溫度",
 	"startbit.startbit_convertLight":"轉換光線值為標準命令，發送到手機端，APP會顯示當前光線等級(0~255)",
 	"startbit.startbit_convertBattery":"轉換電壓值，發送到手機端，APP會顯示當前電壓",
-	"startbit.startbit_init_colorSensor":"初始化顏色傳感器，請在程序啟動時執行",
-	"startbit.startbit_checkCurrentColor":"可以獲得顏色傳感器檢測到顏色",
-	"startbit.startbit_avoidSensor":"獲得避障傳感器狀態，從而知道前方有沒有障礙物,返回1遇到障礙物，返回0沒有遇到障礙物",
+	"startbit.startbit_init_colorSensor":"初始化顏色感應器，請在程序啟動時執行",
+	"startbit.startbit_checkCurrentColor":"可以獲得顏色感應器檢測到顏色",
+	"startbit.startbit_avoidSensor":"獲得避障感應器狀態，從而知道前方有沒有障礙物,返回1遇到障礙物，返回0沒有遇到障礙物",
 	"startbit.startbit_fan_speed":"控制風扇旋轉",
-	"startbit.startbit_readLineFollowerStatus":"獲得巡線傳感器狀態",
+	"startbit.startbit_readLineFollowerStatus":"獲得循跡感應器狀態",
 	"startbit.startbit_touchButton":"檢測觸摸按鍵是否有按下，有按下返回1，沒有按下返回0",
-	"startbit.startbit_ultrasonic":"獲得超聲波模塊測試到的障礙物的距離",
+	"startbit.startbit_ultrasonic":"獲得超聲波模組測試到的障礙物的距離",
 	"startbit.startbit_getKnobValue":"獲取旋鈕的ad值",
-	"startbit.startbit_lineSensorValue":"獲取巡線傳感器的ad值",
-	"startbit.startbit_connectWifi":"配置startbit的Wifi模塊連接到網絡",
-	"startbit.startbit_isConnectedWifi":"檢測startbit的Wifi模塊是否連接成功",
+	"startbit.startbit_lineSensorValue":"獲取循跡感應器的ad值",
+	"startbit.startbit_connectWifi":"配置startbit的Wifi模組連接到網絡",
+	"startbit.startbit_isConnectedWifi":"檢測startbit的Wifi模組是否連接成功",
 	"startbit.startbit_send_getMac":"發送配對請求",
 	"startbit.onstartbit_getMac":"當收到設備ID時觸發",
 	"startbit.startbit_getMacAddress":"獲取到設備ID字符串，與藍牙發送結合起來使用",
@@ -43,9 +43,9 @@
 	"startbit.startbit_stopActionGroup":"讓舵機控制板停止當前運行的動作組",
 	"startbit.startbit_sendAttitude":"向舵機控制板發送Microbit的姿態",
 	"startbit.startbit_setFanSpeed":"設置風扇的速度",
-	"startbit.startbit_getphotosensitiveValue":"獲取光敏傳感器的ad值",
-	"startbit.startbit_photosensitiveSensor":"獲得光敏傳感器的狀態，返回1表示檢測到光亮，返回0表示沒有檢測到光亮",
-	"startbit.startbit_digitaltube":"設置數碼管接口, 顯示亮度以及顯示位數(1-4)",
+	"startbit.startbit_getphotosensitiveValue":"獲取光敏感應器的ad值",
+	"startbit.startbit_photosensitiveSensor":"獲得光敏感應器的狀態，返回1表示檢測到光亮，返回0表示沒有檢測到光亮",
+	"startbit.startbit_digitaltube":"設置數碼管連接埠, 顯示亮度以及顯示位數(1-4)",
 	"startbit.startbit_showNumber":"顯示一個整數, 可以是負數",
 	"startbit.startbit_showbit":"在指定位置顯示一個數字, 數字的範圍是 0-15",
 	"startbit.startbit_showhex":"以十六進制顯示數字",
@@ -58,7 +58,7 @@
 	"startbit.startbit_ASRREAD":"獲取識別結果",
 	"startbit.startbit_ASRAddWords":"添加詞條，添加的詞條可以掉電保存",
 	"startbit.startbit_ASRWORDSERASE":"擦除所有設置的詞條",
-	"startbit.startbit_line_followers":"判斷巡線傳感器的狀態",
+	"startbit.startbit_line_followers":"判斷循跡感應器的狀態",
 	"startbit.startbit_MP3_BUTTON":"播放，暫停，上一首，下一首，",
 	"startbit.startbit_MP3_VOL":"調整播放音量，需要在播放前設置，範圍0-30",
 	"startbit.startbit_MP3_SINGLE_LOOP":"開啟或者關閉單曲循環，需要在播放後設置",
