--- a/_locales/zh/startbit-strings.json
+++ b/_locales/zh/startbit-strings.json
@@ -1,7 +1,7 @@
 {
 	"startbit.startbit_Init|block": "初始化Startbit",
 	"startbit.startbit_setBusServo|block": "設置總線舵機|%port|編號(數組類型) %index|角度(數組類型)(-120~120) %angle|運行時間 %duration",
-	"startbit.startbit_setMotorSpeed|block": "設置電機1速度(-100~100)|%speed1|和電機2|速度 %speed2",
+	"startbit.startbit_setMotorSpeed|block": "設置馬達1速度(-100~100)|%speed1|和馬達2|速度 %speed2",
 	"startbit.startbit_getSoundVolume|block": "音量值",
 	"startbit.startbit_getBatVoltage|block":"電量值(mV)",
 	"StartbitLights.Light1|block":"彩燈1",
@@ -97,37 +97,37 @@
 	"startbit.startbit_convertBattery|block":"轉換電量命令 %data",
 	"startbit.startbit_ext_output|block":"設置擴展口|管腳 %pin|%out",
 	"startbit.startbit_ext_io_status|block":"擴展口狀態 %pin",
-	"startbit.startbit_lineFollower.S1_IN_S2_IN|block":"傳感器1和傳感器2在黑線內",
-	"startbit.startbit_lineFollower.S1_IN_S2_OUT|block":"傳感器1在黑線內，傳感器2在黑線外",
-	"startbit.startbit_lineFollower.S1_OUT_S2_IN|block":"傳感器1在黑線外，傳感器2在黑線內",
-	"startbit.startbit_lineFollower.S1_OUT_S2_OUT|block":"傳感器1和傳感器2在黑線外",
-	"startbit.startbit_colorSensorPort.port4|block":"接口4",
-	"startbit.startbit_busServoPort.port6|block":"接口6",
-	"startbit.AvoidSensor.Sensor_1|block":"避障傳感器1",
-	"startbit.AvoidSensor.Sensor_2|block":"避障傳感器2",
-	"startbit.startbit_ultrasonicPort.port1|block":"接口1",
-	"startbit.startbit_ultrasonicPort.port2|block":"接口2",
-	"startbit.startbit_init_colorSensor|block":"初始化顏色傳感器 %port",
+	"startbit.startbit_lineFollower.S1_IN_S2_IN|block":"感應器1和感應器2在黑線內",
+	"startbit.startbit_lineFollower.S1_IN_S2_OUT|block":"感應器1在黑線內，感應器2在黑線外",
+	"startbit.startbit_lineFollower.S1_OUT_S2_IN|block":"感應器1在黑線外，感應器2在黑線內",
+	"startbit.startbit_lineFollower.S1_OUT_S2_OUT|block":"感應器1和感應器2在黑線外",
+	"startbit.startbit_colorSensorPort.port4|block":"連接埠4",
+	"startbit.startbit_busServoPort.port6|block":"連接埠6",
+	"startbit.AvoidSensor.Sensor_1|block":"避障感應器1",
+	"startbit.AvoidSensor.Sensor_2|block":"避障感應器2",
+	"startbit.startbit_ultrasonicPort.port1|block":"連接埠1",
+	"startbit.startbit_ultrasonicPort.port2|block":"連接埠2",
+	"startbit.startbit_init_colorSensor|block":"初始化顏色感應器 %port",
 	"startbit.startbit_checkCurrentColor|block":"檢測到顏色 %color",
-	"startbit.startbit_avoidSensor|block":"避障傳感器|%port|檢測到障礙物",
+	"startbit.startbit_avoidSensor|block":"避障感應器|%port|檢測到障礙物",
 	"startbit.startbit_fan_speed|block":"設置風扇|%port|速度 %speed",
-	"startbit.startbit_readLineFollowerStatus|block":"巡線傳感器|%port|%status",
-	"startbit.startbit_ultrasonic|block":"超聲波模塊|%port|測試到障礙物距離(Cm)",
-	"startbit.startbit_knobPort.port1|block":"接口1",
-	"startbit.startbit_knobPort.port3|block":"接口3",
+	"startbit.startbit_readLineFollowerStatus|block":"循跡感應器|%port|%status",
+	"startbit.startbit_ultrasonic|block":"超聲波模組|%port|測試到障礙物距離(Cm)",
+	"startbit.startbit_knobPort.port1|block":"連接埠1",
+	"startbit.startbit_knobPort.port3|block":"連接埠3",
 	"startbit.startbit_getKnobValue|block":"旋鈕|%port|ad值(0~255)",
-	"startbit.startbit_photosensitivePort.port1|block":"接口1",
-	"startbit.startbit_PhotosensitiveSensor.port1|block":"接口1",
+	"startbit.startbit_photosensitivePort.port1|block":"連接埠1",
+	"startbit.startbit_PhotosensitiveSensor.port1|block":"連接埠1",
 	"startbit.startbit_getphotosensitiveValue|block":"光敏|%port|ad值(0~255)",
-	"startbit.startbit_photosensitiveSensor|block":"光敏傳感器|%port|檢測到光亮",
-	"startbit.startbit_touchKeyPort.port1|block":"接口1",
-	"startbit.startbit_touchKeyPort.port2|block":"接口2",
-	"startbit.startbit_touchKeyPort.port3|block":"接口3",
+	"startbit.startbit_photosensitiveSensor|block":"光敏感應器|%port|檢測到光亮",
+	"startbit.startbit_touchKeyPort.port1|block":"連接埠1",
+	"startbit.startbit_touchKeyPort.port2|block":"連接埠2",
+	"startbit.startbit_touchKeyPort.port3|block":"連接埠3",
 	"startbit.startbit_touchButton|block":"觸摸按鈕|%port|被按下",
-	"startbit.startbit_lineSensorValue|block":"獲取巡線傳感器|%port|%sensor|的ad值",
-	"startbit.startbit_LineFollowerSensor.LFSensor_1|block":"循線傳感器1",
-	"startbit.startbit_LineFollowerSensor.LFSensor_2|block":"循線傳感器2",
-	"startbit.startbit_lineFollowPort.port1|block":"接口1",
+	"startbit.startbit_lineSensorValue|block":"獲取循跡感應器|%port|%sensor|的ad值",
+	"startbit.startbit_LineFollowerSensor.LFSensor_1|block":"循跡感應器1",
+	"startbit.startbit_LineFollowerSensor.LFSensor_2|block":"循跡感應器2",
+	"startbit.startbit_lineFollowPort.port1|block":"連接埠1",
 	"startbit.startbit_connectWifi|block":"配置連接到Wifi,名稱|%ssid|和密碼 %passwrd",
 	"startbit.startbit_isConnectedServer|block":"設備連接服務器是否成功？",
 	"startbit.startbit_send_getMac|block":"發送配對請求",
@@ -152,8 +152,8 @@
 	"startbit.startbit_sendAttitude|block":"發送姿態 旋轉|%pitch| 橫滾|%roll",
 	"startbit.startbit_actionRunover|block":"動作組運行完成",
 	"startbit.startbit_setFanSpeed|block":"設置 |%port 風扇速度(-100~100) |%speed1",
-	"startbit.startbit_fanPort.port1|block":"接口1",
-	"startbit.startbit_fanPort.port2|block":"接口2",
+	"startbit.startbit_fanPort.port1|block":"連接埠1",
+	"startbit.startbit_fanPort.port2|block":"連接埠2",
 	"startbit.startbit_digitaltube|block":"設置數碼管|%port|亮度 %intensity|顯示位數 %count",
 	"startbit.startbit_showNumber|block":"數碼管顯示整數| %num",
 	"startbit.startbit_showbit|block":"數碼管顯示整數(0-15)| %num|位置 %bit",
@@ -163,22 +163,22 @@
 	"startbit.startbit_off|block":"關閉數碼管顯示",
 	"startbit.startbit_on|block":"開啟數碼管顯示",
 	"startbit.startbit_clear|block":"清除數碼管顯示",
-	"startbit.startbit_digitaltubePort.port1|block":"接口1",
-	"startbit.startbit_digitaltubePort.port2|block":"接口2",
+	"startbit.startbit_digitaltubePort.port1|block":"連接埠1",
+	"startbit.startbit_digitaltubePort.port2|block":"連接埠2",
 	"startbit.startbit_convertHandCmd|block":"轉換uHand:bit指令 %data",
-	"startbit.startbit_ASRSETMODE|block":"語音識別模塊設置為%mode模式",
-	"startbit.startbit_ASRREAD|block":"語音識別模塊獲取識別詞條編號",
-	"startbit.startbit_ASRAddWords|block":"語音識別模塊添加詞條編號|%idnum 拼音|%words",
+	"startbit.startbit_ASRSETMODE|block":"語音識別模組設置為%mode模式",
+	"startbit.startbit_ASRREAD|block":"語音識別模組獲取識別詞條編號",
+	"startbit.startbit_ASRAddWords|block":"語音識別模組添加詞條編號|%idnum 拼音|%words",
 	"startbit.startbit_ASRWORDSERASE|block":"擦除全部詞條",
 	"startbit.startbit_LineColor.Black|block":"黑線",
 	"startbit.startbit_LineColor.White|block":"白線",
-	"startbit.startbit_LineFollowerSensors.S1|block":"傳感器1",
-	"startbit.startbit_LineFollowerSensors.S2|block":"傳感器2",
-	"startbit.startbit_LineFollowerSensors.S3|block":"傳感器3",
-	"startbit.startbit_LineFollowerSensors.S4|block":"傳感器4",
-	"startbit.startbit_line_followers|block":"四路巡線模塊|%lineFollowerSensor 檢測到|%LineColor ?",
-	"startbit.startbit_MP3_BUTTON|block":"MP3模塊 |%button 歌曲",
-	"startbit.startbit_MP3_VOL|block":"MP3模塊音量 |%value",
-	"startbit.startbit_MP3_SINGLE_LOOP|block":"MP3模塊單曲循環 |%state",
-	"startbit.startbit_MP3_PLAY_NUM|block":"MP3模塊播放序號|%num 歌曲"
+	"startbit.startbit_LineFollowerSensors.S1|block":"感應器1",
+	"startbit.startbit_LineFollowerSensors.S2|block":"感應器2",
+	"startbit.startbit_LineFollowerSensors.S3|block":"感應器3",
+	"startbit.startbit_LineFollowerSensors.S4|block":"感應器4",
+	"startbit.startbit_line_followers|block":"四路循跡模組|%lineFollowerSensor 檢測到|%LineColor ?",
+	"startbit.startbit_MP3_BUTTON|block":"MP3模組 |%button 歌曲",
+	"startbit.startbit_MP3_VOL|block":"MP3模組音量 |%value",
+	"startbit.startbit_MP3_SINGLE_LOOP|block":"MP3模組單曲循環 |%state",
+	"startbit.startbit_MP3_PLAY_NUM|block":"MP3模組播放序號|%num 歌曲"
 }
