--- a/_locales/zh/startbit-jsdoc-strings.json
+++ b/_locales/zh/startbit-jsdoc-strings.json
@@ -56,8 +56,8 @@
 	"startbit.startbit_clear":"清除顯示",
 	"startbit.startbit_ASRSETMODE":"設置識別模式：1循環識別模式；2口令模式；3按鍵模式。設置的識別模式可以掉電保存",
 	"startbit.startbit_ASRREAD":"獲取識別結果",
-	"startbit.startbit_ASRAddWords":"添加詞條，添加的詞條可以掉電保存",
-	"startbit.startbit_ASRWORDSERASE":"擦除所有設置的詞條",
+	"startbit.startbit_ASRAddWords":"增加文字，增加的文字可以掉電保存",
+	"startbit.startbit_ASRWORDSERASE":"擦除所有設置的文字",
 	"startbit.startbit_line_followers":"判斷循跡感應器的狀態",
 	"startbit.startbit_MP3_BUTTON":"播放，暫停，上一首，下一首，",
 	"startbit.startbit_MP3_VOL":"調整播放音量，需要在播放前設置，範圍0-30",
