--- a/_locales/zh/startbit-strings.json
+++ b/_locales/zh/startbit-strings.json
@@ -167,9 +167,9 @@
 	"startbit.startbit_digitaltubePort.port2|block":"連接埠2",
 	"startbit.startbit_convertHandCmd|block":"轉換uHand:bit指令 %data",
 	"startbit.startbit_ASRSETMODE|block":"語音識別模組設置為%mode模式",
-	"startbit.startbit_ASRREAD|block":"語音識別模組獲取識別詞條編號",
-	"startbit.startbit_ASRAddWords|block":"語音識別模組添加詞條編號|%idnum 拼音|%words",
-	"startbit.startbit_ASRWORDSERASE|block":"擦除全部詞條",
+	"startbit.startbit_ASRREAD|block":"語音識別模組獲取識別文字編號",
+	"startbit.startbit_ASRAddWords|block":"語音識別模組增加文字編號|%idnum 拼音|%words",
+	"startbit.startbit_ASRWORDSERASE|block":"擦除全部文字",
 	"startbit.startbit_LineColor.Black|block":"黑線",
 	"startbit.startbit_LineColor.White|block":"白線",
 	"startbit.startbit_LineFollowerSensors.S1|block":"感應器1",
